--- a/Projetos/Site divertidamente/estilo/style.css
+++ b/Projetos/Site divertidamente/estilo/style.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 
 * {
-    background-image: url(../Imagens/background.jfif);
+    background-image: url(../Imagens/backgroundaumentado.png);
     background-size: cover;
     color: white;
 }
